# haskell-language-server

./: cabal.project  haskell-language-server.cabal
exe/: Plugins.hs
ghcide/src/Development/IDE/: Main.hs
ghcide/src/Development/IDE/Core/: FileStore.hs
ghcide/src/Development/IDE/LSP/: Notifications.hs
plugins/hls-explicit-prescedence-plugin/: hls-explicit-prescedence-plugin.cabal
plugins/hls-explicit-prescedence-plugin/src/Ide/Plugin/: ExplicitPrescedence.hs
