cabal-version:      2.2
name:               hls-explicit-prescedence-plugin
version:            1.0.0.0
synopsis:           Plugin for Haskell Language Server that shows prescedence.
license:            Apache-2.0
license-file:       LICENSE
author:             Ernests Kuzņecovs
maintainer:         ernestkuznecovs@gmail.com
category:           Development
build-type:         Simple
extra-source-files: LICENSE

library
  exposed-modules:    Ide.Plugin.ExplicitPrescedence
  hs-source-dirs:     src
  build-depends:
    , aeson
    , base                  >=4.12 && <5
    , containers
    , deepseq
    , ghc
    , ghcide                ^>=1.3
    , hls-graph
    , hls-plugin-api        ^>=1.1
    , lsp
    , text
    , unordered-containers
    , transformers
    , binary
    , hashable
    , regex-tdfa
    , hls-tactics-plugin
    , syb

  default-language:   Haskell2010
  default-extensions:
    DataKinds
    TypeOperators